# Masters

./: .gitignore  .gitmodules  .travis.yml  README  README.md  debuglog.txt  lasso.txt
cloudclean/: .gitignore  AUTHORS  CMakeCache.txt  CMakeLists.txt  CloudClean.pro  Jamile A.csv  LICENCE.txt  LICENSE  Makefile  MousePoles.h  Simon B.csv  appdata.cpp  appdata.h  cloudclean.cbp  cloudclean.cpp  cloudclean.h  cloudclean.ui  cloudclean_full.pro  cloudclean_full.pro.user.2.5pre1  cmake_install.cmake  debuglog.txt  dim.cl  general.pri  glwidget.cpp  glwidget.h  helpers.h  io.h  jamile A.csv  lasso.cl  lasso.txt  layer.cpp  layer.h  layerlist.cpp  layerlist.cpp.autosave  layerlist.h  main.cpp  manifest.json  minimal.supp  moc_cloudclean.bc  moc_glwidget.bc  (+6 more)
cloudclean/.kdev4/: cloudclean2.kdev4
cloudclean/UnitTests/: CMakeLists.txt
cloudclean/UnitTests-build/: CMakeCache.txt  UnitTests  UnitTests.cbp  cmake_install.cmake
cloudclean/camera/: camera.h
cloudclean/cloudclean/: CMakeLists.txt  Makefile  camera.cpp  camera.h  cloudclean.pro  cloudclean.qrc  cloudmodel.cpp  cloudmodel.h  cmake_install.cmake  glarea.cpp  glarea.h  io.h  layer.cpp  layer.h  layerlist.cpp  layerlist.cpp.autosave  layerlist.h  layerview.cpp  layerview.h  layerview.ui  main.cpp  mainwindow.cpp  mainwindow.h  moc_cloudmodel.cxx  moc_glarea.cxx  moc_layerlist.cxx  moc_layerview.cxx  moc_mainwindow.cxx  moc_subsampledialog.cxx  moc_toolbox.cxx  pluginmanager.cpp  pluginmanager.h  pointpicker.cpp  pointpicker.h  qrc_cloudclean.cpp  qrc_cloudclean.cxx  subsampledialog.cpp  subsampledialog.h  subsampledialog.ui  toolbox.cpp  (+5 more)
cloudclean/cloudclean/shaders/: lasso.vert  normals.vert  qrc_cloudclean.cpp
cloudclean/cmake/: FindOpenCL.cmake
cloudclean/common/: Makefile  common.pro  interfaces.h  libcommon.so.1.0.0  testinterface.h  timer.hpp  utilities.cpp  utilities.h
cloudclean/debian/: cloudclean.desktop
cloudclean/plugins/: CMakeLists.txt  cmake_install.cmake  find.sh
cloudclean/plugins/edit_brush/: Makefile  edit_brush.cpp  edit_brush.h  edit_brush.pro  qrc_edit_brush.cpp
cloudclean/plugins/edit_brush_curvature/: Makefile  edit_brush_curvature.cpp  edit_brush_curvature.h  edit_brush_curvature.pro  edit_brush_fpfh.cpp  qrc_edit_brush.cpp
cloudclean/plugins/edit_brush_fpfh/: Makefile  edit_brush.cpp  edit_brush.h  edit_brush_fpfh.cpp  edit_brush_fpfh.h  edit_brush_fpfh.pro  qrc_edit_brush.cpp  settings.cpp  settings.h  settings.ui  ui_settings.h
cloudclean/plugins/edit_flood_fpfh/: CMakeLists.txt  Makefile  edit_flood_fpfh.cpp  edit_flood_fpfh.h  edit_flood_fpfh.pro  ui_settings.h
cloudclean/plugins/edit_flood_normals/: CMakeLists.txt  Makefile  edit_flood_normals.cpp  edit_flood_normals.h  edit_flood_normals.pro  settings.h  ui_settings.h
cloudclean/plugins/edit_flood_pca/: CMakeLists.txt  Makefile  edit_flood_pca.cpp  edit_flood_pca.h  edit_flood_pca.pro  settings.ui  ui_settings.h
cloudclean/plugins/edit_flood_smoothness/: CMakeLists.txt  edit_flood_normals.cpp  edit_flood_smoothness.cpp  edit_flood_smoothness.pro  edit_flood_smoothness.qrc  settings.ui
cloudclean/plugins/edit_lasso/: CMakeLists.txt  Makefile  cmake_install.cmake  edit_lasso.cpp  edit_lasso.h  edit_lasso.pro  edit_lasso.qrc  qrc_edit_lasso.cpp  settings.cpp  settings.h  settings.ui  ui_settings.h
cloudclean/plugins/edit_lasso_cpu/: Makefile  cpu_lasso.h  edit_lasso.cpp  edit_lasso.h  edit_lasso_cpu.pro  qrc_edit_lasso.cpp
cloudclean/plugins/edit_lasso_cpu_old/: Makefile  edit_lasso_cpu.cpp  edit_lasso_cpu.pro
cloudclean/plugins/edit_mincut/: CMakeLists.txt  Makefile  edit_mincut.cpp  edit_mincut.h  edit_mincut.pro  edit_mincut.qrc  mincut.cpp  mincut.cpp.autosave  mincut.h  mincut_stoer.cpp  mincut_stoer.h  settings.cpp  settings.h  settings.ui
cloudclean/plugins/edit_mincut2/: CMakeLists.txt  compgeom.cpp  edit_mincut.cpp  edit_mincut.h  edit_mincut.qrc  edit_mincut2.cpp  edit_mincut2.h  edit_mincut2.pro  lasso.cpp  lasso.h  mincut.cpp  mincut.h  settings.cpp  settings.h  settings.ui
cloudclean/plugins/edit_mincut3/: CMakeLists.txt  edit_mincut.cpp  edit_mincut.h  edit_mincut.qrc  edit_mincut3.cpp  edit_mincut3.pro  mincut.cpp  mincut.h  settings.h  settings.ui
cloudclean/plugins/edit_sample/: Makefile  edit_sample.cpp  edit_sample.h  edit_sample.pro  edit_sample.qrc  qrc_edit_sample.cpp
cloudclean/plugins/edit_test/: Makefile  edit_lasso.pro  edit_lasso.qrc  edit_test.cpp  edit_test.h  qrc_edit_lasso.cpp
cloudclean/plugins/edit_veg/: Makefile  edit_veg.cpp  edit_veg.h  edit_veg.pro  edit_veg.qrc  qrc_edit_veg.cpp
cloudclean/plugins/test/: Makefile  test.cpp  test.h  test.pro
cloudclean/plugins/viz_normals/: CMakeLists.txt  Makefile  qrc_viz_normals.cpp  viz_normals.cpp  viz_normals.h  viz_normals.pro
cloudclean/scancrop/: Makefile  hello.ptx  scancrop.cpp
cloudclean/shaders/: lasso.vert  points.vert
cloudclean/src/: CMakeLists.txt  CloudClean.pro  Makefile  MousePoles.cpp  actionmanager.cpp  actionmanager.h  app.cpp  app.h  appexport.h  appinfo.h  cloudmodel.cpp  core.cpp  core.h  general.pri  glarea.cpp  glarea.h  glheaders.h  helpers.h  interfaces.h  lassoselectplugin.cpp  layer.h  layerlist.cpp  layerview.cpp  layerview.h  main.cpp  mainwindow.cpp  mainwindow.h  newlayercommand.cpp  newlayercommand.h  pluginmanager.cpp  pluginmanager.h  selectcommand.cpp  selectcommand.h  ui_layerview.h
cloudclean/src/cloudclean/: CMakeLists.txt  CloudClean  camera.cpp  camera.h  cdatamodel.cpp  cdatamodel.h  clayer.cpp  clayer.h  cloudmodel.cpp  cloudmodel.h  cpointcloud.cpp  cpointcloud.h  cselection.cpp  cselection.h  glarea.cpp  glarea.h  layer.cpp  layer.h  layerlist.cpp  layerlist.h  layerview.cpp  layerview.h  mainwindow.cpp  mainwindow.h  pluginmanager.cpp  pluginmanager.h  pointpicker.cpp  pointpicker.h  subsampledialog.cpp  (+5 more)
cloudclean/test/: CMakeLists (copy).txt  CMakeLists.txt  main.cpp
cloudclean/testdata/: axis.ptx  test.ptx  tinyplane_with_nan.ptx
cloudclean/unittests/: Makefile  lasso.cpp  lasso.run
utilities/rangetest/: CMakeLists.txt  Makefile  range_image_border_extraction
(+439 files in other folders)
